Crash on Removing File Output Node when Color Management #99028

Closed
opened 2022-06-20 22:23:26 +02:00 by Sebastian Fischer · 9 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.40

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Broken: version 3.3.0 Alpha, branch: master, commit date: 2022-06-19 14:42, hash: 6ad9d8e2247d

Short description of error
Enabling the color management override in the output properties and removing a file output node in the compositor afterwards will result in a crash.
The crash keeps happening even when you disable the override property again.

Exact steps for others to reproduce the error

  • Open attached .blend file.
  • Delete the file output node in the compositor.

colormanagement_crash.blend
{F13209036, size=full}

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.40 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Broken: version 3.3.0 Alpha, branch: master, commit date: 2022-06-19 14:42, hash: `6ad9d8e2247d` **Short description of error** Enabling the color management override in the output properties and removing a file output node in the compositor afterwards will result in a crash. The crash keeps happening even when you disable the override property again. **Exact steps for others to reproduce the error** * Open attached .blend file. * Delete the file output node in the compositor. [colormanagement_crash.blend](https://archive.blender.org/developer/F13209025/colormanagement_crash.blend) {[F13209036](https://archive.blender.org/developer/F13209036/grafik.png), size=full}

Added subscriber: @fishsnack

Added subscriber: @fishsnack
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm

Stack trace:
ucrtbased.dll       :0x00007FF866F37C10  _threadid
ucrtbased.dll       :0x00007FF866F37C10  _threadid
ucrtbased.dll       :0x00007FF866F4E000  abort
blender.exe         :0x00007FF61078A030  MemorY_ErroR C:\Users\Pratik\Desktop\BlenderOSP\blender\intern\guardedalloc\intern\mallocn_guarded_impl.c:1017
blender.exe         :0x00007FF610788A70  MEM_guarded_freeN C:\Users\Pratik\Desktop\BlenderOSP\blender\intern\guardedalloc\intern\mallocn_guarded_impl.c:864
blender.exe         :0x00007FF60D4FA370  BKE_curvemapping_free_data C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.c:90
blender.exe         :0x00007FF60D4FA310  BKE_curvemapping_free C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.c:107
blender.exe         :0x00007FF60D4F6600  BKE_color_managed_view_settings_free C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.c:1860
blender.exe         :0x00007FF60D43E940  BKE_image_format_free C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\image_format.cc:55
blender.exe         :0x00007FF60FCF7570  blender::nodes::node_composite_output_file_cc::free_output_file C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\nodes\composite\nodes\node_composite_output_file.cc:227
blender.exe         :0x00007FF60D3E71A0  node_free_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\node.cc:2962
blender.exe         :0x00007FF60D3F2D80  nodeRemoveNode C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\node.cc:3061
blender.exe         :0x00007FF60F8DEFD0  blender::ed::space_node::node_delete_exec C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_node\node_edit.cc:1851
blender.exe         :0x00007FF60D2A0D30  wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1403
blender.exe         :0x00007FF60D29BD00  wm_handler_operator_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2427
blender.exe         :0x00007FF60D29F340  wm_handlers_do_keymap_with_keymap_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2819
blender.exe         :0x00007FF60D29E510  wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3145
blender.exe         :0x00007FF60D29CA40  wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3285
blender.exe         :0x00007FF60D297FA0  wm_event_do_region_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3706
blender.exe         :0x00007FF60D297E70  wm_event_do_handlers_area_regions C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3736
blender.exe         :0x00007FF60D2A9440  wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3932
blender.exe         :0x00007FF60D271BF0  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:626
blender.exe         :0x00007FF60D2695B0  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:551
blender.exe         :0x00007FF6109686C0  invoke_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79
blender.exe         :0x00007FF610968470  __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
blender.exe         :0x00007FF610968450  __scrt_common_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331
blender.exe         :0x00007FF610968780  mainCRTStartup d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17
KERNEL32.DLL        :0x00007FF88FD87020  BaseThreadInitThunk
ntdll.dll           :0x00007FF890E42630  RtlUserThreadStart
I can confirm ```lines=10 Stack trace: ucrtbased.dll :0x00007FF866F37C10 _threadid ucrtbased.dll :0x00007FF866F37C10 _threadid ucrtbased.dll :0x00007FF866F4E000 abort blender.exe :0x00007FF61078A030 MemorY_ErroR C:\Users\Pratik\Desktop\BlenderOSP\blender\intern\guardedalloc\intern\mallocn_guarded_impl.c:1017 blender.exe :0x00007FF610788A70 MEM_guarded_freeN C:\Users\Pratik\Desktop\BlenderOSP\blender\intern\guardedalloc\intern\mallocn_guarded_impl.c:864 blender.exe :0x00007FF60D4FA370 BKE_curvemapping_free_data C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.c:90 blender.exe :0x00007FF60D4FA310 BKE_curvemapping_free C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.c:107 blender.exe :0x00007FF60D4F6600 BKE_color_managed_view_settings_free C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.c:1860 blender.exe :0x00007FF60D43E940 BKE_image_format_free C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\image_format.cc:55 blender.exe :0x00007FF60FCF7570 blender::nodes::node_composite_output_file_cc::free_output_file C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\nodes\composite\nodes\node_composite_output_file.cc:227 blender.exe :0x00007FF60D3E71A0 node_free_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\node.cc:2962 blender.exe :0x00007FF60D3F2D80 nodeRemoveNode C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\node.cc:3061 blender.exe :0x00007FF60F8DEFD0 blender::ed::space_node::node_delete_exec C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_node\node_edit.cc:1851 blender.exe :0x00007FF60D2A0D30 wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1403 blender.exe :0x00007FF60D29BD00 wm_handler_operator_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2427 blender.exe :0x00007FF60D29F340 wm_handlers_do_keymap_with_keymap_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2819 blender.exe :0x00007FF60D29E510 wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3145 blender.exe :0x00007FF60D29CA40 wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3285 blender.exe :0x00007FF60D297FA0 wm_event_do_region_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3706 blender.exe :0x00007FF60D297E70 wm_event_do_handlers_area_regions C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3736 blender.exe :0x00007FF60D2A9440 wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3932 blender.exe :0x00007FF60D271BF0 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:626 blender.exe :0x00007FF60D2695B0 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:551 blender.exe :0x00007FF6109686C0 invoke_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79 blender.exe :0x00007FF610968470 __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 blender.exe :0x00007FF610968450 __scrt_common_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331 blender.exe :0x00007FF610968780 mainCRTStartup d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17 KERNEL32.DLL :0x00007FF88FD87020 BaseThreadInitThunk ntdll.dll :0x00007FF890E42630 RtlUserThreadStart ```
Pratik Borhade changed title from Crash on Removing File Output Node when Color Management Override was or is enabled to Crash on Removing File Output Node when Color Management 2022-06-21 06:59:38 +02:00
Member

Added subscribers: @brecht, @lichtwerk

Added subscribers: @brecht, @lichtwerk
Member

Seems this is more or less broken since the introduction of 7aab508e32.
Not a nice thing to have, will set to High priority.

CC @brecht

Seems this is more or less broken since the introduction of 7aab508e32. Not a nice thing to have, will set to High priority. CC @brecht

This issue was referenced by 8ef0a0b231

This issue was referenced by 8ef0a0b2310091d9e72b1bcced98b51999d42707

This issue was referenced by 1c83354c63

This issue was referenced by 1c83354c63a334a57118579d653e642524f23fce

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-06-23 16:59:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99028
No description provided.